--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <center>
+ <main id="main-section">
+	 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkGmAsnb8Wf1E2y4icOw5qQpQdDtCo9iRV8w&usqp=CAU">
+     <h1>Pricing Card</h1>
+	 <p>Price: Rs.200</p>
+	 <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+     <button>Buy Now</button>
+ </main>
+ </center>
 
+	
 </body>
 
 </html>
