--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <div>
  <center>
  <main id="main-section">
 	 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkGmAsnb8Wf1E2y4icOw5qQpQdDtCo9iRV8w&usqp=CAU">
@@ -19,7 +20,7 @@
      <button>Buy Now</button>
  </main>
  </center>
-
+</div>
 	
 </body>
 
